fix(nav bar): change z-index of nav bar to always stay on top of content

--- a/main.css
+++ b/main.css
@@ -193,6 +193,7 @@ a {
 header {
     position: sticky;
     top: 1.25rem;
+    z-index: 1;
 }
 
 @keyframes nav-bar__appear {
